--- a/500pxDemo/Views/Base.lproj/Main.storyboard
+++ b/500pxDemo/Views/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="INF-4S-WLd">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ua5-hU-Y8M">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,61 +10,42 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Show Case-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Main App View Controller-->
+        <scene sceneID="myD-V1-NyS">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ShowcaseViewController" customModule="_00pxDemo" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="ua5-hU-Y8M" customClass="MainAppViewController" customModule="_00pxDemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="sAZ-5Q-Ixw">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AZG-f5-dKa">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cpz-9V-Lgq">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <connections>
-                                    <segue destination="vnr-Rp-Y90" kind="embed" identifier="photoShowCase" id="vvJ-3r-MJz"/>
+                                    <segue destination="v6w-Ls-a0t" kind="embed" identifier="showcaseVCSegue" id="r1Q-fq-etc"/>
                                 </connections>
                             </containerView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="AZG-f5-dKa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="IhZ-ys-8f7"/>
-                            <constraint firstItem="AZG-f5-dKa" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="fxd-ZH-XoZ"/>
-                            <constraint firstItem="AZG-f5-dKa" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="j9K-fq-jcs"/>
-                            <constraint firstItem="AZG-f5-dKa" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="toZ-Jo-29w"/>
+                            <constraint firstItem="cpz-9V-Lgq" firstAttribute="top" secondItem="sAZ-5Q-Ixw" secondAttribute="top" id="FJc-c8-TpG"/>
+                            <constraint firstItem="5ol-f5-SVN" firstAttribute="bottom" secondItem="cpz-9V-Lgq" secondAttribute="bottom" id="W3M-XM-LXm"/>
+                            <constraint firstItem="5ol-f5-SVN" firstAttribute="trailing" secondItem="cpz-9V-Lgq" secondAttribute="trailing" id="a7v-jQ-OvQ"/>
+                            <constraint firstItem="cpz-9V-Lgq" firstAttribute="leading" secondItem="5ol-f5-SVN" secondAttribute="leading" id="jsq-mr-r2L"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <viewLayoutGuide key="safeArea" id="5ol-f5-SVN"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Show Case" id="vPv-ds-jDd"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="q2e-Nz-INY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="950" y="-564"/>
+            <point key="canvasLocation" x="-727" y="-565"/>
         </scene>
-        <!--CollectionComponents-->
-        <scene sceneID="yJe-9y-64K">
+        <!--ShowcaseStoryboard-->
+        <scene sceneID="KsU-fP-1MA">
             <objects>
-                <viewControllerPlaceholder storyboardIdentifier="MasterCollectionView" storyboardName="CollectionComponents" id="vnr-Rp-Y90" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="axv-t9-u2P" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewControllerPlaceholder storyboardIdentifier="showcaseNavVC" storyboardName="ShowcaseStoryboard" id="v6w-Ls-a0t" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WCu-kV-YB4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1622" y="-565"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="Oau-Ab-JeD">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="INF-4S-WLd" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="p8Z-cD-WFM">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="xsd-zy-rZX"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="BX2-XA-Pca" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="-564.46776611694156"/>
+            <point key="canvasLocation" x="86" y="-566"/>
         </scene>
     </scenes>
 </document>
